# optimi-cpp-logger

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
config/: logger.example.json
examples/: multi_thread_example.cpp
include/optimi/logger/: logger.hpp
scripts/tests/: run_all_tests.ksh  run_asan_leak_check.ksh
src/: config_parser.cpp  logger.cpp
tests/: config_parser_tests.cpp  logger_init_tests.cpp  thread_safety_tests.cpp
